# tensorflow-cmake

./: .pre-commit-config.yaml  CMakeLists.txt  build.py  configure.py  install-build-dependencies-ubuntu.sh  install.cmake.in  install.py  pyproject.toml  setup-dev-env.sh
ci/: build_and_test.sh
test/: CMakeLists.txt  smoke_test.cpp
